--- a/package.json
+++ b/package.json
@@ -1,46 +1,58 @@
 {
-	"name": "test-app",
+	"name": "my-app",
+	"version": "0.1.0",
 	"private": true,
-	"version": "0.0.0",
-	"homepage": "https://Temirlan0305.github.io/test-task-app/",
-	"type": "module",
-	"scripts": {
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d dist",
-		"dev": "vite",
-		"build": "vite build",
-		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview",
-		"mock": "json-server -w db.json -p 4200"
-	},
+	"homepage": "https://Temirlan0305.github.io/test-task-app",
 	"dependencies": {
-		"@reduxjs/toolkit": "^2.1.0",
-		"axios": "^1.6.7",
-		"json-server": "^1.0.0-alpha.23",
+		"@reduxjs/toolkit": "^2.2.1",
+		"@testing-library/jest-dom": "^5.14.1",
+		"@testing-library/react": "^13.0.0",
+		"@testing-library/user-event": "^13.2.1",
+		"@types/jest": "^27.0.1",
+		"@types/node": "^16.7.13",
+		"@types/react": "^18.0.0",
+		"@types/react-dom": "^18.0.0",
+		"axios": "^1.6.8",
+		"gh-pages": "^6.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-hook-form": "^7.50.1",
-		"react-paginate": "^8.2.0",
+		"react-hook-form": "^7.51.1",
 		"react-query": "^3.39.3",
 		"react-redux": "^9.1.0",
-		"react-router-dom": "^6.22.0",
-		"react-toastify": "^10.0.4",
-		"sass": "^1.70.0"
+		"react-router-dom": "^6.22.3",
+		"react-scripts": "5.0.1",
+		"react-toastify": "^10.0.5",
+		"sass": "^1.72.0",
+		"typescript": "^4.4.2",
+		"web-vitals": "^2.1.0"
+	},
+	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	},
 	"devDependencies": {
-		"@types/react": "^18.2.55",
-		"@types/react-dom": "^18.2.19",
-		"@typescript-eslint/eslint-plugin": "^6.21.0",
-		"@typescript-eslint/parser": "^6.21.0",
-		"@vitejs/plugin-react": "^4.2.1",
-		"autoprefixer": "^10.4.17",
-		"eslint": "^8.56.0",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.4.5",
-		"gh-pages": "^6.1.1",
-		"postcss": "^8.4.35",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5.2.2",
-		"vite": "^5.1.0"
+		"tailwindcss": "^3.4.1"
 	}
 }
